src/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>For Req 3085</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <label>Course Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed (Equivalent)</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress / Past Due</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Old Version</fullName>
                </value>
                <value>
                    <fullName>Payment Refunded</fullName>
                </value>
                <value>
                    <fullName>Pending Post-Work</fullName>
                </value>
                <value>
                    <fullName>Pending Post-Work/Past Due</fullName>
                </value>
                <value>
                    <fullName>Registered / Past Due</fullName>
                </value>
                <value>
                    <fullName>Registration Pending</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Pending Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Online Class</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>External Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Certification__r.Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Completed_Count__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Course_Status__c,&quot;Completed&quot;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Completed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <label>Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Object_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Object ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Course</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>